Increased time limit for HaplotypeCaller from 2h (default) to 8h

--- a/conf/rockfish.config
+++ b/conf/rockfish.config
@@ -26,6 +26,7 @@ process {
         array = 100
         clusterOptions = "-A eande106 -e errlog.txt"
         container = "docker://quay.io/biocontainers/gatk4:4.6.1.0--py310hdfd78af_0"
+        time = "8h"
         queue = "parallel"
     }
 
