Convert walltime for HaplotypeCaller to a runtime parameter

--- a/conf/rockfish.config
+++ b/conf/rockfish.config
@@ -26,7 +26,7 @@ process {
         array = 100
         clusterOptions = "-A eande106 -e errlog.txt"
         container = "docker://quay.io/biocontainers/gatk4:4.6.1.0--py310hdfd78af_0"
-        time = "8h"
+        time = params.haplotypecaller_time
         queue = "parallel"
     }
 
@@ -125,6 +125,7 @@ process {
 
 params {
     data_path = "/vast/eande106/data"
+    haplotypecaller_time  = '8h'
 }
 
 executor {
